# django-minimal

./: README.md  main.py  pyproject.toml
project/api/: README.md  urls.py
project/config/: settings.py
