[tool.poetry]
name = "django-minimal"
version = "0.1.0"
description = "a clean django-ninja scaffold for apis"
authors = ["Genese Lessa <genese.lessa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-ninja = "^1.2.2"
pyjwt = "^2.8.0"
django-cors-headers = "^4.4.0"
taskipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
runserver = 'python main.py runserver'
